# citation_station

./: .gitignore  ARCHITECTURE.adoc  Cargo.toml  LICENSE-MIT  README.adoc
.github/: copilot-instructions.md
citation_station/: Cargo.toml
citation_station/src/: abbrev.rs  bibliography.rs  html.rs  lib.rs  unicode.rs
citation_station/src/api/: author.rs  citation.rs  date.rs  errors.rs  location.rs  media.rs  mod.rs  page_range.rs  title.rs
citation_station/src/api/media/: book.rs  common.rs  conference_paper.rs  mod.rs  online_manual.rs  online_video.rs  version.rs
citation_station/tests/: formatting.rs
