[package]
name = "citation_station"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Core citation and bibliography management functionality"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"