[package]
name = "citation_station"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Core citation and bibliography management functionality"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
scraper = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
unicode-segmentation = "1.12.0"
